# sipi-core

./: .env.development  .env.production  .env.shared  CONFIG.md  README.md  app.py  pyproject.toml
.claude/: settings.json  settings.local.json
alembic/: env.py
alembic/versions/: 01a41ca6e47a_post_initial.py  083054dd3b15_initial.py  88d33911b427_post_initial.py  a1b2c3d4e5f6_municipio_codigo_ine_not_null.py  b6291b73d948_initial.py  d81c09aaa358_post_initial.py  e8a4ac3a0dc4_initial_migration.py  f644c3112d44_post_initial.py
alembic_bak/: alembic.ini
db/: __init__.py  metadata.py  registry.py
db/mixins/: base.py  contacto.py  direccion.py
db/models/: discovery.py  documentos.py  figuras_proteccion.py  geografia.py  historiografia.py  inmuebles.py  intervenciones.py  osm.py  subvenciones.py  tipologias.py  transmisiones.py  users.py
docker/: Dockerfile.frontend  docker-compose.yml  init-db.sql
docs/: IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MULTI_SCHEMA_ARCHITECTURE.md  MULTI_SCHEMA_README.md
mixins/: base.py  contacto.py  direccion.py
models/: actores_base.py  administraciones.py  agencias.py  discovery.py  documentos.py  figuras_proteccion.py  geografia.py  inmuebles.py  intervenciones.py  osm.py  privados.py  subvenciones.py  tecnicos.py  tipologias.py  transmisiones.py  users.py
scripts/: apply_migration_manual.py  check_schema.py  inspect_aragon_data.py  migration_administraciones_jerarquia.sql  remove_unique_constraint_nombre.py  run_migration_administraciones.py
sipi_core/: .env.development  .gitignore  __init__.py  config.py
(+117 files in other folders)
